<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wms_map_matching</name>
  <version>0.2.2</version>
  <description>Matching of airborne drone video to map retrieved from OGC WMS endpoint.</description>
  <maintainer email="hmakelin@protonmail.com">Harri Mäkelin</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
