<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gisnav</name>
  <version>0.1.0</version>
  <description>GISNav ROS 2 package for estimating camera pose between two images.</description>
  <author email="hmakelin@protonmail.com">Harri Makelin</author>
  <maintainer email="hmakelin@protonmail.com">Harri Makelin</maintainer>
  <license>MIT</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch_testing</test_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>gisnav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
