<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gisnav_gpu</name>
  <version>1.0.0</version>
  <description>GISNav ROS 2 package for GPU-accelerated pose estimation</description>
  <author email="hmakelin@protonmail.com">Harri Makelin</author>
  <maintainer email="hmakelin@protonmail.com">Harri Makelin</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
