<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ubx_publisher</name>
  <version>1.0.0</version>
  <description>Listens to ROS UBX messages and publishes them to a serial port</description>
  <maintainer email="hmakelin@protonmail.com">Harri Makelin</maintainer>
  <license>MIT</license>

  <depend>ublox_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
